--- a/src/style/index.css
+++ b/src/style/index.css
@@ -10,6 +10,8 @@
 @import url("../blocks/title.css");
 @import url("../blocks/container/container.css");
 @import url("../blocks/text/text_green.css");
+@import url("../blocks/text/text_heavy.css");
+@import url("../blocks/text/text_bold.css");
 
 @import url("../blocks/button/button.css");
 
@@ -34,3 +36,29 @@
 @import url("../blocks/section-top/section-top__slider-point.css");
 @import url("../blocks/section-top/section-top__slider-btns-block.css");
 @import url("../blocks/section-top/section-top__slider-btn.css");
+
+@import url("../blocks/proposal/proposal.css");
+@import url("../blocks/proposal/proposal__container.css");
+@import url("../blocks/proposal/proposal__title-block.css");
+@import url("../blocks/proposal/proposal__title.css");
+@import url("../blocks/proposal/proposal__info-block.css");
+@import url("../blocks/proposal/proposal__info-block-text.css");
+@import url("../blocks/proposal/proposal__list-wrapper.css");
+@import url("../blocks/proposal/proposal__list.css");
+@import url("../blocks/proposal/proposal__el.css");
+@import url("../blocks/proposal/proposal__el-title-block.css");
+@import url("../blocks/proposal/proposal__el-title.css");
+@import url("../blocks/proposal/proposal__el-num.css");
+@import url("../blocks/proposal/proposal__el-content-wrapper.css");
+@import url("../blocks/proposal/proposal__el-content.css");
+@import url("../blocks/proposal/proposal__el-subtitle.css");
+@import url("../blocks/proposal/proposal__el-description.css");
+@import url("../blocks/proposal/proposal__el-list.css");
+@import url("../blocks/proposal/proposal__el-list-el.css");
+@import url("../blocks/proposal/proposal__el-list-el-title.css");
+@import url("../blocks/proposal/proposal__el-list-el-value.css");
+@import url("../blocks/proposal/proposal__el-slider.css");
+@import url("../blocks/proposal/proposal__el-ellipse.css");
+@import url("../blocks/proposal/proposal__banner.css");
+@import url("../blocks/proposal/proposal__banner-list.css");
+@import url("../blocks/proposal/proposal__banner-el.css");
