--- a/src/style/index.css
+++ b/src/style/index.css
@@ -61,3 +61,17 @@
 @import url("../blocks/proposal/proposal__banner.css");
 @import url("../blocks/proposal/proposal__banner-list.css");
 @import url("../blocks/proposal/proposal__banner-el.css");
+
+@import url("../blocks/demand/demand.css");
+@import url("../blocks/demand/demand__container.css");
+@import url("../blocks/demand/demand__content.css");
+@import url("../blocks/demand/demand__title-block.css");
+@import url("../blocks/demand/demand__title.css");
+@import url("../blocks/demand/demand__title-offset.css");
+@import url("../blocks/demand/demand__text.css");
+@import url("../blocks/demand/demand__info-block.css");
+@import url("../blocks/demand/demand__info-block-title.css");
+@import url("../blocks/demand/demand__info-block-text.css");
+@import url("../blocks/demand/demand__pre-form.css");
+@import url("../blocks/demand/demand__pre-form-title.css");
+@import url("../blocks/demand/demand__pre-form-button.css");
