--- a/src/blocks/demand/demand.css
+++ b/src/blocks/demand/demand.css
@@ -1,6 +1,40 @@
 .demand {
+  position: relative;
+
+  padding-top: 118px;
+  padding-bottom: 140px;
+
   background-image: url("@images/demand/bg__demand.jpg");
   background-repeat: no-repeat;
   background-position: 50% 0;
   background-size: cover;
+}
+
+@media (max-width: 601px) {
+  .demand {
+    z-index: 1;
+
+    padding-top: 71px;
+    padding-bottom: 80px;
+
+    background-position: 0% 0;
+    background-size: 150.5%;
+  }
+
+  .demand::before {
+    content: "";
+
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    background-image: linear-gradient(
+        270deg,
+        rgb(2 2 2 / 59%) 0%,
+        rgb(2 2 2 / 0%) 34.56%
+      ),
+      linear-gradient(27.44deg, #020203 29.31%, rgb(2 2 3 / 0%) 50.36%);
+  }
 }
