--- a/src/blocks/economy/economy__block-price-title.css
+++ b/src/blocks/economy/economy__block-price-title.css
@@ -8,3 +8,8 @@
   line-height: 140%;
   color: #828282;
 }
+@media (max-width: 601px) {
+  .economy__block-price-title {
+    font-size: 12px;
+  }
+}
