--- a/src/blocks/economy/economy__block-slider-title.css
+++ b/src/blocks/economy/economy__block-slider-title.css
@@ -4,3 +4,9 @@
   line-height: 150%;
   text-align: center;
 }
+
+@media (max-width: 601px) {
+  .economy__block-slider-title {
+    font-size: 20px;
+  }
+}
