--- a/src/style/index.css
+++ b/src/style/index.css
@@ -103,6 +103,7 @@
 @import url("../blocks/economy/economy__block-description-img-el.css");
 @import url("../blocks/economy/economy__block-description-img-el-wrap.css");
 @import url("../blocks/economy/economy__slider-btns-block.css");
+@import url("../blocks/economy/economy__slider-points-block.css");
 
 @import url("../blocks/founder/founder.css");
 
