--- a/src/blocks/economy/economy__block-description-text.css
+++ b/src/blocks/economy/economy__block-description-text.css
@@ -5,3 +5,21 @@
 .economy__block-description-text:not(:last-child) {
   margin-bottom: 20px;
 }
+
+@media (max-width: 601px) {
+  .economy__block-description-text {
+    margin-bottom: 0;
+    font-size: 12px;
+    line-height: 140%;
+  }
+
+  .economy__block-description-text:not(:last-child) {
+    margin-bottom: 10px;
+  }
+
+  .economy__block-description-text:nth-child(2) {
+    margin-bottom: 26px;
+    padding-bottom: 26px;
+    border-bottom: 1px solid #696969;
+  }
+}
