--- a/src/blocks/economy/economy__block-price-text.css
+++ b/src/blocks/economy/economy__block-price-text.css
@@ -3,3 +3,9 @@
   font-weight: 700;
   line-height: 150%;
 }
+
+@media (max-width: 601px) {
+  .economy__block-price-text {
+    font-size: 16px;
+  }
+}
