--- a/src/blocks/economy/economy__block-slider.css
+++ b/src/blocks/economy/economy__block-slider.css
@@ -3,3 +3,10 @@
   height: 100%;
   padding-bottom: 56px;
 }
+
+@media (max-width: 601px) {
+  .economy__block-slider {
+    order: 2;
+    padding-bottom: 9px;
+  }
+}
