--- a/src/blocks/economy/economy__slider-btns-block.css
+++ b/src/blocks/economy/economy__slider-btns-block.css
@@ -2,3 +2,17 @@
   display: flex;
   gap: 20px;
 }
+
+@media (max-width: 601px) {
+  .economy__slider-btns-block {
+    position: absolute;
+    right: 26px;
+    bottom: 26px;
+    gap: 16px;
+  }
+
+  .economy__slider-btns-block .slider-btn {
+    width: 50px;
+    height: 50px;
+  }
+}
