--- a/src/blocks/economy/economy__title.css
+++ b/src/blocks/economy/economy__title.css
@@ -8,3 +8,9 @@
 .economy__title .text_green {
   display: block;
 }
+
+@media (max-width: 601px) {
+  .economy__title {
+    margin-bottom: 46px;
+  }
+}
